--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
   "dependencies": {
     "@heroui/react": "^2.8.2",
     "@neondatabase/serverless": "^1.0.1",
-    "@stacks/auth": "^7.2.0",
+    "@stacks/blockchain-api-client": "^8.2.0",
     "@stacks/connect": "^8.1.9",
-    "@stacks/network": "^7.0.2",
+    "@stacks/storage": "^6.15.0",
     "@stacks/transactions": "^7.0.6",
-    "@stacks/wallet-sdk": "^7.2.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/uuid": "^10.0.0",
