--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18",
+    "react-dom": "^18",
     "uuid": "^11.1.0",
     "ws": "^8.18.3",
     "zod": "^4.0.17",
