--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.2",
-    "@neondatabase/serverless": "^1.0.1",
     "@stacks/blockchain-api-client": "^8.2.0",
     "@stacks/connect": "^8.1.9",
     "@stacks/storage": "^6.15.0",
     "@stacks/transactions": "^7.0.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/pg": "^8.15.5",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
     "axios": "^1.11.0",
@@ -29,6 +29,7 @@
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
+    "pg": "^8.16.3",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^11.1.0",
